tests/vertical-slice/accept/protobuf_message_resource_close.hew
import std::encoding::protobuf;

fn main() -> i64 {
    let message = protobuf.new();
    message.close();
    0
}
