tests/vertical-slice/reject/rc_use_after_move.hew
fn main() {
    let rc = Rc::new(1);
    let moved = rc;
    print(rc.strong_count());
    let _ = moved;
}
